src/test/deca/context/invalid/class_pass2_9.deca
// Description:
//    test minimaliste pour induire a l erreur lors du pass 2 (declaration de methode avec même nom)
//
// Resultats:
// erreur
//
//
// Historique:
//    cree le 18/01/2025



class A {
    void p( ){}
    void p(int a){}
}

